preparing to push

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.mondesirexpo.marvelquizzmobile"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2f7c5c05-d8a4-4074-af47-dc137493df6b"
+      }
     }
   }
 }
