--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-navigation-bar": "~2.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
     "firebase": "^9.21.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
